--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "lab1",
+  "name": "confusion",
   "version": "1.0.0",
-  "description": "",
-  "main": "aboutus.html",
+  "description": "This is a website for Ristorante Con Fusion",
+  "main": "index.html",
   "scripts": {
-    "start": "aboutus.html",
+    "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "lite-server": "^2.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0"
